altmetric-hidden isn't hidden by default and causing padding issues

--- a/src/main/css/altmetric.css
+++ b/src/main/css/altmetric.css
@@ -8,6 +8,10 @@ span.altmetric-embed, .__dimensions_badge_embed__ {
     float: left;
 }
 
+.altmetric-hidden {
+    display: none;
+}
+
 .altmetric-embed img {
     height: 21px;
     width: unset;
